--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background-color: rgb(230,230,230);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.center{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 1100px;
+    padding: 0 2%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+    background-color: white;
+    border-bottom: 2px solid rgb(240,240,240);
+    padding: 10px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.header_logo{
+    width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header_loginForm{
+    width:50%;
+    text-align: right;
+}
+
+.header_loginForm form{
+    display: inline-block;
+}
+
+.header_loginForm input[type=text],
+.header_loginForm input[type=password]{
+    width: 120px;
+    height: 20px;
+    margin-right: 5px;
+    border: 1px solid #ccc;
+    padding-left: 5px;
+}
+
+.header_loginForm input[type=submit]{
+    background-color: #0095f6;
+    color: white;
+    border: 0;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 4px 10px;
+}
+
+.btn_criarConta{
+    display: inline-block;
+}
+
+.btn_criarConta a{
+    font-size: 14px;
+    margin: 0 10px;
+}
+
+.header_logadoInfo{
+    text-align: right;
+}
+
+.header_logadoInfo a{
+    margin: 0 10px;
+    background-color: #0095f6;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 8px 10px;
+    float: right;
 }
