--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,54 @@ body{
     padding: 8px 10px;
     float: right;
 }
+
+.modalCriarConta{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.formCriarConta{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    background-color: white;
+    padding: 20px;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+}
+
+.formCriarConta input{
+    width: 100%;
+    height: 20px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+}
+
+.formCriarConta input[type=submit]{
+    cursor: pointer;
+    background-color: #0095f6;
+    color: white;
+    font-size: 14px;
+}
+
+.close-modal-criar{
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: #0095f6;
+    color: white;
+    text-align: center;
+    line-height: 28px;
+}
